# addrslips

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG_MODE.md  PIPELINE.md  flake.nix
assets/: tailwind.css
docs/plans/: gui-implementation.md
examples/: create_test_image.rs  custom_pipeline.rs  test_debug_lineage.rs  test_debug_mode.rs  test_executor.rs  test_pipeline.rs
migrations/: 20260131154527_init.sql
src/: lib.rs  main.rs  models.rs  pipeline.rs
src/core/db/: address.rs  area.rs  mod.rs  model.rs  project.rs  state.rs  street.rs  team.rs  util.rs
src/detection/: circles.rs  contours.rs  mod.rs  ocr.rs  preprocessing.rs  steps.rs
src/gui/: app.rs  message.rs  mod.rs  state.rs
src/gui/screens/: landing_page.rs  loading_page.rs  mod.rs  select_area.rs
src/gui/widgets/: mod.rs
src/ui/: address_detection.rs  home.rs  layout.rs  mod.rs  overview.rs
src/ui/components/: mod.rs
tests/: test_address_crud.rs  test_area_crud.rs  test_constraints.rs  test_simple.rs
tests/common/: fixtures.rs  mod.rs
