[package]
name = "addrslips"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
anyhow = "1.0"
ocrs = "0.12"
rten = "0.24"
tinydb = "1.0.0"
serde = "1.0.228"
uuid = {version = "1.20.0", features = ["serde"] }
rstar = "0.12.2"
rmp-serde = "1.3.1"

# GUI Framework (optional)
iced = { version = "0.12", features = ["canvas", "image", "tokio"], optional = true }
iced_aw = { version = "0.9", optional = true }

# File Dialogs (optional)
rfd = { version = "0.14", optional = true }

[features]
default = ["gui"]
gui = ["iced", "iced_aw", "rfd"]
