[package]
name = "addrslips"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
anyhow = "1.0"
ocrs = "0.12"
rten = "0.24"
tinydb = "1.0.0"
tokio = { version = "1.49" }
serde = "1.0.228"
uuid = {version = "1.20.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"]}
tempdir = "0.3.7"
tar = "0.4"
zstd = "0.13"
time = { version="0.3", features = ["formatting", "parsing", "local-offset"] }

# GUI Framework (optional)
iced = { version = "0.14", features = ["canvas", "image", "tokio"], optional = true }
iced_aw = { version = "0.13", optional = true }

# File Dialogs (optional)
rfd = { version = "0.14", optional = true }
iced_core = "0.14.0"
iced_widget = "0.14.2"

[dev-dependencies]
tokio = { version = "1.49", features = ["test-util", "rt-multi-thread", "macros"] }
tempfile = "3.8"

[features]
default = ["gui"]
gui = ["iced", "iced_aw", "rfd"]
