[package]
name = "addrslips"
version = "0.1.0"
authors = ["Patric Plattner <patric@patricplattner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
anyhow = "1.0"
ocrs = "0.12"
rten = "0.24"
tinydb = "1.0.0"
tokio = { version = "1.49" }
serde = "1.0.228"
uuid = {version = "1.20.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"]}
tempdir = "0.3.7"
tar = "0.4"
zstd = "0.13"
time = { version="0.3", features = ["formatting", "parsing", "local-offset"] }
urlencoding = "2.1"
rfd = "0.15"
regex = { version = "1.12.3" }
lazy_static = "1.5"

[dev-dependencies]
tempfile = "*"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
